...
                                                    <rect key="frame" x="24" y="188" width="0.0" height="0.0"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="DateLabel"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="LikeButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ImH-jZ-F0c" userLabel="Like Button">
                                                    <rect key="frame" x="370" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="dJY-A5-Bj3"/>
                                                        <constraint firstAttribute="height" constant="44" id="eLc-v4-9yk"/>
                                                    </constraints>
...
                                <connections>
                                    <outlet property="delegate" destination="IZD-mr-QcE" id="4Dj-Q1-4Ez"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KuD-Wh-r7b" userLabel="Back Button">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="nSL-2W-zFJ"/>
                                    <constraint firstAttribute="width" constant="48" id="p7Y-Bg-VYK"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
                                <rect key="frame" x="185" y="470.66666666666669" width="60" height="60.000000000000057"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="bdZ-gg-Y3Y"/>
                                    <constraint firstAttribute="width" constant="60" id="gUh-Co-w3t"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZIF-93-iO3" userLabel="Authenticate">
                                <rect key="frame" x="16" y="726" width="398" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="dGa-OO-0Gb"/>
                                </constraints>
                                <state key="normal" title="Button"/>
...
            </objects>
            <point key="canvasLocation" x="1647" y="-731"/>
        </scene>
        <!--Web View View Controller-->
        <scene sceneID="Gq9-Bq-oAR">
            <objects>
                <viewController restorationIdentifier="UnsplashWebView" storyboardIdentifier="WebViewViewController" modalPresentationStyle="fullScreen" id="if2-we-AN8" customClass="WebViewViewController" customModule="TickPic" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="WqB-Ap-yqI">
                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" restorationIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="lOl-fI-Fec" userLabel="WebView">
                                <rect key="frame" x="0.0" y="103" width="430" height="829"/>
...
