...
        let label = UILabel()
        label.text = "Hello, gay!"
        label.textColor = .white
        label.font = .systemFont(ofSize: 13, weight: .regular)
        return label
    }()
    let logoutButton: UIButton = {
      let button = UIButton.systemButton(
        with: UIImage(named: "Exit Button")!,
        target: self,
        action: #selector(Self.didTapLogoutButton)
      )
      button.tintColor = .red
...
